MAUTOSEL-405 [TESTS] fixed SimpleLInkingTest

--- a/fixture/default/core/Mage/Checkout/data/SalesOrder.yml
+++ b/fixture/default/core/Mage/Checkout/data/SalesOrder.yml
@@ -362,8 +362,10 @@ fixed_bundle_for_order:
             bundle_items_position: 1
             add_product_1:
                 bundle_items_search_sku: %add_product_1%
+                selection_item_price: %price_product_1%
             add_product_2:
                 bundle_items_search_sku: %add_product_2%
+                selection_item_price: %price_product_2%
         item_2:
             bundle_items_default_title: Drop-down
             bundle_items_input_type: Drop-down
@@ -371,8 +373,10 @@ fixed_bundle_for_order:
             bundle_items_position: 2
             add_product_1:
                 bundle_items_search_sku: %add_product_1%
+                selection_item_price: %price_product_1%
             add_product_2:
                 bundle_items_search_sku: %add_product_2%
+                selection_item_price: %price_product_2%
         item_3:
             bundle_items_default_title: Radio Buttons
             bundle_items_input_type: Radio Buttons
@@ -380,8 +384,10 @@ fixed_bundle_for_order:
             bundle_items_position: 3
             add_product_1:
                 bundle_items_search_sku: %add_product_1%
+                selection_item_price: %price_product_1%
             add_product_2:
                 bundle_items_search_sku: %add_product_2%
+                selection_item_price: %price_product_2%
         item_4:
             bundle_items_default_title: Checkbox
             bundle_items_input_type: Checkbox
@@ -389,8 +395,10 @@ fixed_bundle_for_order:
             bundle_items_position: 4
             add_product_1:
                 bundle_items_search_sku: %add_product_1%
+                selection_item_price: %price_product_1%
             add_product_2:
                 bundle_items_search_sku: %add_product_2%
+                selection_item_price: %price_product_2%
 
 #<------------CONFIGURABLE------------>
 configurable_product_for_order:
